Imported from https://liangkarl@github.com/liangkarl/shell.git

--- a/project.config
+++ b/project.config
@@ -1,2 +1,22 @@
 [access]
 	inheritFrom = All-Projects
+[project]
+	description = Shell Setup
+[access "refs/*"]
+	owner = group user/Karl Liang (liangkarl)
+[access "refs/for/refs/*"]
+	read = group user/Karl Liang (liangkarl)
+	push = group user/Karl Liang (liangkarl)
+	label-Code-Review = -2..+2 group user/Karl Liang (liangkarl)
+	label-Verified = -1..+1 group user/Karl Liang (liangkarl)
+	rebase = group user/Karl Liang (liangkarl)
+	removeReviewer = group user/Karl Liang (liangkarl)
+	submit = group user/Karl Liang (liangkarl)
+[access "refs/heads/*"]
+	read = group user/Karl Liang (liangkarl)
+	create = group user/Karl Liang (liangkarl)
+	push = +force group user/Karl Liang (liangkarl)
+	pushMerge = group user/Karl Liang (liangkarl)
+[access "refs/tags/*"]
+	push = group user/Karl Liang (liangkarl)
+	push = +force group user/Karl Liang (liangkarl)
