Fix mis-match binding and remap to easier keys

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -45,8 +45,8 @@ bind C-a last-window
 
 ## Key binding - Modify to vi-like binding
 # No need to press prefix + n,p everytime
-bind -r H next-window
-bind -r L previous-window
+bind -r C-l next-window
+bind -r C-h previous-window
 
 # Make pane-moved with k,j,h,l 
 bind -r k select-pane -U
