Modify key-binding for splitting/creating win

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -20,7 +20,7 @@ set -g history-limit 10000
 # PS. set-window-option is equal to setw
 set-window-option -g mode-keys vi
 
-# Set longer decision time (more operation time) 
+# Set longer decision time (more operation time)
 set -sg escape-time 1
 
 ## Key binding
@@ -37,8 +37,8 @@ bind . source-file ~/.tmux.conf \;\
 # Unbind default split-window commands
 unbind '"'
 unbind %
-bind | split-window -h
-bind - split-window -v
+bind C-- split-window -h
+bind C-/ split-window -v
 
 # Prevent typo and make similar way as screen
 bind C-a last-window
@@ -48,7 +48,10 @@ bind C-a last-window
 bind -r C-l next-window
 bind -r C-h previous-window
 
-# Make pane-moved with k,j,h,l 
+# More c or C-c to create window
+bind C-c new-window
+
+# Make pane-moved with k,j,h,l
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
