Update tmux config with new keybind and alias cmd

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -2,55 +2,43 @@
 # Changing ctrl b to ctrl a as the command button
 #  PS. Set-option is equal to set
 set-option -g prefix C-a
-#  PS. Unbind-key is equal to unbind
-unbind-key C-b
-bind-key a send-prefix
-
-# Having an issue with color detail in tmux
+# solve colorized issue in tmux
 set -g default-terminal "screen-256color"
-
 # Set first window to index 1 (not 0) to map more to the keyboard layout
 set -g base-index 1
 set -g pane-base-index 1
-
 # Scrollback size
 set -g history-limit 10000
-
 # Set copy mode from emacs-like to vi-like
 # PS. set-window-option is equal to setw
 set-window-option -g mode-keys vi
 
 # Set longer decision time (more operation time)
-set -sg escape-time 1
+set -sg escape-time 0
+
+# Add alias for split-window
+set -s command-alias[10] vs='split-window -h'
+set -s command-alias[11] hs='split-window -v'
 
 ## Key binding
+#  PS. Unbind-key is equal to unbind
+unbind-key C-b
+bind-key a send-prefix
 # Default kill-window is prefix + &. Unbind it.
 unbind &
 bind X confirm-before -p "kill this window? (y/n)"\
              kill-window
-
-unbind .
 # Bind to reload tmux setting
+unbind .
 bind . source-file ~/.tmux.conf \;\
         display 'Reloaded tmux config.'
-
-# Unbind default split-window commands
-unbind '"'
-unbind %
-bind C-- split-window -h
-bind C-/ split-window -v
-
-# Prevent typo and make similar way as screen
-bind C-a last-window
-
-## Key binding - Modify to vi-like binding
-# No need to press prefix + n,p everytime
-bind -r C-l next-window
-bind -r C-h previous-window
-
 # More c or C-c to create window
 bind C-c new-window
-
+# No need to press prefix + n,p everytime
+bind -r C-n next-window
+bind -r C-p previous-window
+# Prevent typo and make similar way as screen
+bind C-a last-window
 # Make pane-moved with k,j,h,l
 bind -r k select-pane -U
 bind -r j select-pane -D
