Update tmux navigation keybinds

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -40,10 +40,10 @@ bind -r C-p previous-window
 # Prevent typo and make similar way as screen
 bind C-a last-window
 # Make pane-moved with k,j,h,l
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind -r C-k select-pane -U
+bind -r C-j select-pane -D
+bind -r C-h select-pane -L
+bind -r C-l select-pane -R
 
 # THEME
 set -g status-bg black
