Add config for using ALE and Coc together

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -8,6 +8,7 @@
 	},
 	"suggest.detailMaxLength": 50,
 	"suggest.maxPreviewWidth": 50,
+	"diagnostic.displayByAle": true,
 
 	"# LSP": "comment",
 	"#languageserver": {
