--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -21,17 +21,17 @@ set -s command-alias[10] vs='split-window -h'
 set -s command-alias[11] hs='split-window -v'
 
 ## Key binding
+
 #  PS. Unbind-key is equal to unbind
-unbind-key C-b
-bind-key a send-prefix
+# unbind-key C-b
+# bind-key a send-prefix
 # Default kill-window is prefix + &. Unbind it.
 unbind &
 bind X confirm-before -p "kill this window? (y/n)"\
              kill-window
-# Bind to reload tmux setting
-unbind .
-bind . source-file ~/.tmux.conf \;\
-        display 'Reloaded tmux config.'
+# # Bind to reload tmux setting
+# prefix + R
+
 # More c or C-c to create window
 bind C-c new-window
 # No need to press prefix + n,p everytime
@@ -39,38 +39,51 @@ bind -r C-n next-window
 bind -r C-p previous-window
 # Prevent typo and make similar way as screen
 bind C-a last-window
-# Make pane-moved with k,j,h,l
+# # Make pane-moved with k,j,h,l
 bind -r C-k select-pane -U
 bind -r C-j select-pane -D
 bind -r C-h select-pane -L
 bind -r C-l select-pane -R
 
-# THEME
-set -g status-bg black
-set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g window-status-current-attr bold
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=yellow]#S#[fg=white]|#[fg=green]#(whoami)#[fg=white]|'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
-
-## TODO: Plugin as below
+## Plugin are as below
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+# Make the copied text in tmux could be paste outside the tmux
+set -g @plugin 'tmux-plugins/tmux-yank'
+# Used for save/restore session after reboot
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+## Choose theme
+# Nord-tmux: https://github.com/arcticicestudio/nord-tmux
+# set -g @plugin "arcticicestudio/nord-tmux"
+# Dracula: https://draculatheme.com/tmux
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-battery false
+set -g @dracula-show-network false
+set -g @dracula-show-weather true
+set -g @dracula-show-location false
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
+set -g @dracula-show-time false
+set -g @dracula-cpu-usage true
+set -g @dracula-ram-usage true
+# Tmux Themepack: https://github.com/jimeh/tmux-themepack
+# set -g @plugin 'jimeh/tmux-themepack'
+# set -g @themepack 'basic'
+# tmux-gruvbox: https://github.com/egel/tmux-gruvbox
+# set -g @plugin 'egel/tmux-gruvbox'
+# set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
