--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -71,13 +71,13 @@ set -g @plugin 'dracula/tmux'
 set -g @dracula-show-battery false
 set -g @dracula-show-network false
 set -g @dracula-show-weather true
-set -g @dracula-show-location false
+set -g @dracula-show-location true
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
 set -g @dracula-show-time false
-set -g @dracula-cpu-usage true
-set -g @dracula-ram-usage true
+set -g @dracula-cpu-usage false
+set -g @dracula-ram-usage false
 # Tmux Themepack: https://github.com/jimeh/tmux-themepack
 # set -g @plugin 'jimeh/tmux-themepack'
 # set -g @themepack 'basic'
