Update tmux.conf for small changes
1. Add more comments
2. Remove run '-b' option since no need for that.

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -51,12 +51,17 @@ bind -r C-l select-pane -R
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
+# Install tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm'
+# Make tmux enviroment more sensible
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
+# Search specific string pattern and copy
 set -g @plugin 'tmux-plugins/tmux-copycat'
+# Enable notice when press prefix
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# Add more keybinds for session
 set -g @plugin 'tmux-plugins/tmux-sessionist'
+# Add more keybinds for pane-window
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 # Make the copied text in tmux could be paste outside the tmux
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -73,11 +78,12 @@ set -g @dracula-show-network false
 set -g @dracula-show-weather true
 set -g @dracula-show-location true
 set -g @dracula-show-fahrenheit false
-set -g @dracula-show-flags true
+set -g @dracula-show-flags false # show '*' in current window
 set -g @dracula-show-left-icon session
 set -g @dracula-show-time false
 set -g @dracula-cpu-usage false
 set -g @dracula-ram-usage false
+set -g @dracula-refresh-rate 5
 # Tmux Themepack: https://github.com/jimeh/tmux-themepack
 # set -g @plugin 'jimeh/tmux-themepack'
 # set -g @themepack 'basic'
@@ -86,4 +92,4 @@ set -g @dracula-ram-usage false
 # set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
