Modify tmux script mainly
1. Modify tmux completion path
2. Modify mechanism of loading alias & completion

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -92,4 +92,4 @@ set -g @dracula-refresh-rate 5
 # set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
