Make <c-a a> to send c-a in tmux

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -24,7 +24,8 @@ set -s command-alias[11] hs='split-window -v'
 
 #  PS. Unbind-key is equal to unbind
 # unbind-key C-b
-# bind-key a send-prefix
+# send ctrl-a by prefix + a
+bind-key a send-prefix
 # Default kill-window is prefix + &. Unbind it.
 unbind &
 bind X confirm-before -p "kill this window? (y/n)"\
