--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -82,12 +82,13 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-show-battery false
 set -g @dracula-show-network false
-set -g @dracula-show-weather true
-set -g @dracula-show-location true
+set -g @dracula-show-weather false
+set -g @dracula-show-location false
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-flags false # show '*' in current window
 set -g @dracula-show-left-icon session
-set -g @dracula-show-time false
+set -g @dracula-show-time true
+set -g @dracula-day-month true
 set -g @dracula-cpu-usage false
 set -g @dracula-ram-usage false
 set -g @dracula-refresh-rate 5
