Add new plugin of shared clipboard of tmux and vim

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -22,6 +22,9 @@ setw -g automatic-rename
 # Set longer decision time (more operation time)
 set -sg escape-time 0
 
+# Used for vim-tmux-clipboard
+set -g focus-events on
+
 # Add alias for split-window
 set -s command-alias[10] vs='split-window -h'
 set -s command-alias[11] hs='split-window -v'
