--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,84 +1,60 @@
-## Global tmux setting
-# Changing ctrl b to ctrl a as the command button
-#  PS. Set-option is equal to set
-set-option -g prefix C-a
+# Global tmux setting
+
+## Command Table
+# | short  | full command      |
+# |--------+-------------------|
+# | set    | set-option        |
+# | setw   | set-window-option |
+# | bind   | bind-key          |
+# | unbind | unbind-key        |
+
+## containers:
+# session > window > pane
+
+set -g prefix `				# set '`' as prefix key
+
 # solve colorized issue in tmux
-# set -g default-terminal "screen-256color"
-# set -g default-terminal "tmux-256color"
 # For nvim :checkhealth setting
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+# set -g default-terminal "screen-255color"
+# set -g default-terminal "tmux-256color"
 
-# Set first window to index 1 (not 0) to map more to the keyboard layout
-set -g base-index 1
-set -g pane-base-index 1
-# Scrollback size
-set -g history-limit 10000
-# Set copy mode from emacs-like to vi-like
-# PS. set-window-option is equal to setw
-set-window-option -g mode-keys vi
-setw -g automatic-rename
-
-# Set longer decision time (more operation time)
-set -sg escape-time 0
-
-# Used for vim-tmux-clipboard
-set -g focus-events on
+set -g base-index 1			# set window index to 1
+set -g pane-base-index 1	# set pane index to 1
+set -g history-limit 10000	# scroll history size
+setw -g mode-keys vi		# set copy-mode to vi style
+setw -g automatic-rename	# rename window automately
+set -sg escape-time 0		# no waiting time
+set -g focus-events on		# Used for vim-tmux-clipboard
 
 # Add alias for split-window
 set -s command-alias[10] vs='split-window -h'
 set -s command-alias[11] hs='split-window -v'
 
-## Key binding
+## Key mapping
+bind ` send-prefix			# press twice '`' => '`'
+bind X confirm-before \
+	-p "kill this window? (y/n)" kill-window
+bind a last-window
 
-#  PS. Unbind-key is equal to unbind
-# unbind-key C-b
-# send ctrl-a by prefix + a
-bind-key a send-prefix
-# Default kill-window is prefix + &. Unbind it.
-unbind &
-bind X confirm-before -p "kill this window? (y/n)"\
-             kill-window
-# # Bind to reload tmux setting
-# prefix + R
-
-# More c or C-c to create window
-bind C-c new-window
-# No need to press prefix + n,p everytime
-bind -r C-n next-window
-bind -r C-p previous-window
-# Prevent typo and make similar way as screen
-bind C-a last-window
-# # Make pane-moved with k,j,h,l
-bind -r C-k select-pane -U
-bind -r C-j select-pane -D
-bind -r C-h select-pane -L
-bind -r C-l select-pane -R
-
-## Plugin are as below
+## Plugins
 # List of plugins
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
-# Install tmux plugin manager
-set -g @plugin 'tmux-plugins/tpm'
-# Make tmux enviroment more sensible
-set -g @plugin 'tmux-plugins/tmux-sensible'
-# Search specific string pattern and copy
-set -g @plugin 'tmux-plugins/tmux-copycat'
-# Enable notice when press prefix
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-# Add more keybinds for session
-set -g @plugin 'tmux-plugins/tmux-sessionist'
-# Add more keybinds for pane-window
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-# Make the copied text in tmux could be paste outside the tmux
-set -g @plugin 'tmux-plugins/tmux-yank'
-# Used for save/restore session after reboot
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-## Choose theme
+set -g @plugin 'tmux-plugins/tpm'			# Tmux plugin manager
+set -g @plugin 'tmux-plugins/tmux-sensible'	# Make tmux more sensible
+set -g @plugin 'tmux-plugins/tmux-copycat'	# Search specific pattern & copy
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # Show hlt while prefix enabled
+set -g @plugin 'tmux-plugins/tmux-sessionist'	# more keymap for session
+set -g @plugin 'tmux-plugins/tmux-pain-control' # more keymap for pane,win
+set -g @plugin 'tmux-plugins/tmux-resurrect'	# save/restore sessions after reboot
+set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
+
+## Themes
 # Nord-tmux: https://github.com/arcticicestudio/nord-tmux
 # set -g @plugin "arcticicestudio/nord-tmux"
 # Dracula: https://draculatheme.com/tmux
@@ -95,9 +71,11 @@ set -g @dracula-day-month true
 set -g @dracula-cpu-usage false
 set -g @dracula-ram-usage false
 set -g @dracula-refresh-rate 5
+
 # Tmux Themepack: https://github.com/jimeh/tmux-themepack
 # set -g @plugin 'jimeh/tmux-themepack'
 # set -g @themepack 'basic'
+
 # tmux-gruvbox: https://github.com/egel/tmux-gruvbox
 # set -g @plugin 'egel/tmux-gruvbox'
 # set -g @tmux-gruvbox 'dark' # or 'light'
