Modify pane control keybinding in tmux

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -35,6 +35,12 @@ set -s command-alias[11] hs='split-window -v'
 ## Key mapping
 bind ` send-prefix			# press twice '`' => '`'
 bind a last-window
+bind r move-window -r		# sort the windows
+
+# create a window next to current one
+bind c new-window -a -c "#{pane_current_path}"
+bind - split-window -h -c "#{pane_current_path}"
+bind | split-window -v -c "#{pane_current_path}"
 
 ## Plugins
 # List of plugins
