Run TPM things at background process

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -82,5 +82,7 @@ set -g @dracula-refresh-rate 5
 # set -g @plugin 'egel/tmux-gruvbox'
 # set -g @tmux-gruvbox 'dark' # or 'light'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+# Initialize TPM (keep this line at the very bottom of tmux.conf)
+# run-shell '-b' is for background process.
+# user would enter tmux quickly and needs some time waiting applied changes
+run -b '~/.config/tmux/plugins/tpm/tpm'
