--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -48,41 +48,41 @@ bind | split-window -v -c "#{pane_current_path}"
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
+TPM_DIR="$XDG_CONFIG_HOME/tmux/plugins/tpm"
+# TPM(tmux plugin manager) itself
+set -g @plugin 'tmux-plugins/tpm'
 
-set -g @plugin 'tmux-plugins/tpm'			# Tmux plugin manager
-set -g @plugin 'tmux-plugins/tmux-sensible'	# Make tmux more sensible
-set -g @plugin 'tmux-plugins/tmux-copycat'	# Search specific pattern & copy
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # Show hlt while prefix enabled
-set -g @plugin 'tmux-plugins/tmux-sessionist'	# more keymap for session
+# Prefix + I to install these plugins
+set -g @plugin 'tmux-plugins/tmux-sensible' # Make tmux more sensible
+set -g @plugin 'tmux-plugins/tmux-sessionist' # more keymap for session
 set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
 
 ## Themes
-# Nord-tmux: https://github.com/arcticicestudio/nord-tmux
-# set -g @plugin "arcticicestudio/nord-tmux"
 # Dracula: https://draculatheme.com/tmux
 set -g @plugin 'dracula/tmux'
+set -g @dracula-show-flags false # show '*' by current pane
+set -g @dracula-show-left-icon session
+
+# show dracula plugins
+# available plugins:
+# battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith,
+# weather, time
+set -g @dracula-plugins "cpu-usage ram-usage"
 set -g @dracula-show-battery false
 set -g @dracula-show-network false
 set -g @dracula-show-weather false
-set -g @dracula-show-location false
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-flags false # show '*' in current window
-set -g @dracula-show-left-icon session
-set -g @dracula-show-time true
-set -g @dracula-day-month true
-set -g @dracula-cpu-usage false
+set -g @dracula-show-time false
+set -g @dracula-day-month false
 set -g @dracula-ram-usage false
+set -g @dracula-cpu-usage false
 set -g @dracula-refresh-rate 5
 
-# Tmux Themepack: https://github.com/jimeh/tmux-themepack
-# set -g @plugin 'jimeh/tmux-themepack'
-# set -g @themepack 'basic'
-
 # tmux-gruvbox: https://github.com/egel/tmux-gruvbox
+# Good theme, but need more customization
 # set -g @plugin 'egel/tmux-gruvbox'
 # set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Initialize TPM (keep this line at the very bottom of tmux.conf)
 # run-shell '-b' is for background process.
-# user would enter tmux quickly and needs some time waiting applied changes
-run -b '~/.config/tmux/plugins/tpm/tpm'
+# go into tmux and wait for applied changes are async
+run -b ${TPM_DIR}/tpm
