tmux: enable visual bell and flag notation

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -27,6 +27,9 @@ setw -g mode-keys vi		# set copy-mode to vi style
 setw -g automatic-rename	# rename window automately
 set -sg escape-time 0		# no waiting time
 set -g focus-events on		# Used for vim-tmux-clipboard
+setw -g monitor-bell on		# monitor bell in the window
+setw -g visual-bell on		# show visual alert when task complete
+setw -g bell-action other	# only other, not current window, triggers bell
 
 # Add alias for split-window
 set -s command-alias[10] vs='split-window -h'
@@ -60,7 +63,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
 ## Themes
 # Dracula: https://draculatheme.com/tmux
 set -g @plugin 'dracula/tmux'
-set -g @dracula-show-flags false # show '*' by current pane
+# '*' -> current pane, '-' -> previous window, '!' -> bell
+set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
 
 # show dracula plugins
