tmux: add reverse history-seaching keybind

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -45,6 +45,9 @@ bind c new-window -a -c "#{pane_current_path}"
 bind - split-window -h -c "#{pane_current_path}"
 bind | split-window -v -c "#{pane_current_path}"
 
+# search history above
+bind j copy-mode \; send-key ?
+
 ## Plugins
 # List of plugins
 # Other examples:
@@ -90,3 +93,7 @@ set -g @dracula-refresh-rate 5
 # run-shell '-b' is for background process.
 # go into tmux and wait for applied changes are async
 run -b ${TPM_DIR}/tpm
+
+## Plugins note
+# 1. https://github.com/roosta/tmux-fuzzback
+# too slow to open fzf (in local NB)
