tmux: install tmux plugin manager automatically
1. show error msg when launch tpm failed

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -54,7 +54,20 @@ bind j copy-mode \; send-key ?
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
-TPM_DIR="$XDG_CONFIG_HOME/tmux/plugins/tpm"
+tpm_dir="$XDG_CONFIG_HOME/tmux/plugins/tpm"
+tpm_url='https://github.com/tmux-plugins/tpm'
+flag='~/.tpm-first-run'
+
+if "test ! -d ${tpm_dir}" \
+    "run 'git clone --depth=1 $tpm_url $tpm_dir \
+             && ${tpm_dir}/bin/install_plugins; \
+             touch ${flag}'"
+
+msg='display-message -p "press Leader + I to install other plugins" ; \
+         set-hook -gu session-created ;'
+if "test -f ${flag}" \
+    "run 'rm -f ${flag}'; set-hook -g session-created '${msg}'"
+
 # TPM(tmux plugin manager) itself
 set -g @plugin 'tmux-plugins/tpm'
 
@@ -92,7 +105,10 @@ set -g @dracula-refresh-rate 5
 # Initialize TPM (keep this line at the very bottom of tmux.conf)
 # run-shell '-b' is for background process.
 # go into tmux and wait for applied changes are async
-run -b ${TPM_DIR}/tpm
+guide='https://github.com/tmux-plugins/tpm'
+err="Fail to launch tmux plugin manager (${tpm_dir}/tpm)."
+msg="Reference ${guide} for detailed information."
+run -b "${tpm_dir}/tpm || echo \"${err} ${msg}\""
 
 ## Plugins note
 # 1. https://github.com/roosta/tmux-fuzzback
