tmux: add float console script in tmux

--- a/config/tmux/float-window.conf
+++ b/config/tmux/float-window.conf
@@ -48,10 +48,6 @@ bind | split-window -v -c "#{pane_current_path}"
 # search history above
 bind j copy-mode \; send-key ?
 
-# open float terminal
-float_script="${XDG_CONFIG_HOME}/tmux/tools/float-pane"
-bind Space run-shell ${float_script}
-
 ## Plugins
 # List of plugins
 # Other examples:
@@ -82,29 +78,29 @@ set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
 
 ## Themes
 # Dracula: https://draculatheme.com/tmux
-set -g @plugin 'dracula/tmux'
+# set -g @plugin 'dracula/tmux'
 # '*' -> current pane, '-' -> previous window, '!' -> bell
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session
+# set -g @dracula-show-flags true
+# set -g @dracula-show-left-icon session
 
 # show dracula plugins
 # available plugins:
 # battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith,
 # weather, time
-set -g @dracula-plugins "cpu-usage ram-usage"
-set -g @dracula-show-battery false
-set -g @dracula-show-network false
-set -g @dracula-show-weather false
-set -g @dracula-show-time false
-set -g @dracula-day-month false
-set -g @dracula-ram-usage false
-set -g @dracula-cpu-usage false
-set -g @dracula-refresh-rate 5
+# set -g @dracula-plugins "cpu-usage ram-usage"
+# set -g @dracula-show-battery false
+# set -g @dracula-show-network false
+# set -g @dracula-show-weather false
+# set -g @dracula-show-time false
+# set -g @dracula-day-month false
+# set -g @dracula-ram-usage false
+# set -g @dracula-cpu-usage false
+# set -g @dracula-refresh-rate 5
 
 # tmux-gruvbox: https://github.com/egel/tmux-gruvbox
 # Good theme, but need more customization
-# set -g @plugin 'egel/tmux-gruvbox'
-# set -g @tmux-gruvbox 'dark' # or 'light'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Initialize TPM (keep this line at the very bottom of tmux.conf)
 # run-shell '-b' is for background process.
