--- a/config/tig/config
+++ b/config/tig/config
@@ -1,3 +1,7 @@
+#
+# The config is focused on the TUI based git tool,
+# not full functional support of git.
+#
 # Config reference
 # https://github.com/jonas/tig/blob/master/tigrc
 # https://jonas.github.io/tig/doc/tigrc.5.html
@@ -22,39 +26,92 @@ set tree-view = line-number:no,interval=5 id:yes,color \
                 date:custom,format="%m/%d/%y %H:%M" date:relative-compact \
                 file-name
 
-# used for leader key
+# View operation {
+bind generic y none
+bind generic r none
+bind generic l none
+bind generic L none
+bind generic d none
 bind generic m none
-bind generic M view-main
+bind generic c none
+bind generic s none
+bind generic S none
+bind generic , none
+bind generic p none
 
-bind status m! ?git checkout %(file)
-bind status ma ?git commit --amend --no-edit
-bind status mA ?git commit --amend
-# NOTE:
-# `git stash save "stash name"` is deprecated at git 2.16
-# and replaced by `git stash push -m "stash name"`
-bind status my ?git stash save "%(prompt [file] name: )" %(file)
-bind status mY ?git stash save "%(prompt [all] name: )"
+bind generic 1 view-main
+bind generic ,1 view-log
+bind generic 2 view-status
+bind generic ,2 view-diff
+bind generic ,3 view-stage
+bind generic ,4 view-paper
+bind generic 3 view-refs
+bind generic 4 view-stash
+bind generic 5 view-reflog
+bind generic b view-blame
+bind generic g view-grep
+bind generic h view-help
+bind generic M maximize
+bind generic q view-close-no-quit
+# }
 
-bind refs mf ?git fetch %(remote) %(branch)
-bind refs mF ?git fetch --all
-bind refs md ?git branch -D %(ref)
-bind refs mD ?git tag -d %(tag)
-bind refs mm ?git merge %(ref)
-bind refs mM ?git merge --no-commit --no-ff %(ref)
-bind refs mb ?git rebase %(ref)
-bind refs mp ?git push %(remote) %(branch)
-bind refs mP ?git push %(remote) HEAD:refs/for/%(branch)
-bind refs mc ?git checkout %(ref)
-bind refs mC ?git checkout -m %(ref)
-bind refs m> ?git fetch . HEAD:%(ref)
+# Misc {
+bind generic pwd<ENTER> +git rev-parse --show-toplevel
+bind generic dc<ENTER> !git diff --check
+# }
 
-bind main ms ?git reset %(commit)
-bind main mS ?git reset --hard %(commit)
-bind main mc ?git checkout %(commit)
-bind main ma !git branch "%(prompt new branch: )" %(commit)
-bind main mA !git tag "%(prompt new tag: )" %(commit)
-bind main mr ?git revert --no-edit %(commit)
-bind main mR ?git revert %(commit)
-bind main mb ?git rebase -i %(commit)
-bind main mp ?git cherry-pick -s %(commit)
-bind main mP ?git format-patch -k --binary --histogram -1 -o . %(commit)
+# Status {
+bind status C none
+bind status ! none
+bind status co<ENTER> @?git checkout %(file)
+bind status d<ENTER> +?git clean -f %(file)
+bind status y<ENTER> @?git stash save "%(prompt new stash: )"
+# }
+
+# Reference {
+bind refs fa<ENTER> @git fetch --all
+bind refs m<ENTER> ?git merge %(ref)
+bind refs rb<ENTER> ?git rebase %(ref)
+bind refs co<ENTER> @git checkout %(ref)
+bind refs cd<ENTER> @git checkout -d %(ref)
+# only available in FF
+bind refs ps<ENTER> @?git fetch . HEAD:%(ref)
+
+bind refs C none
+bind refs ! none
+bind refs !m<ENTER> @git merge --abort
+bind refs !rb<ENTER> @git rebase --abort
+bind refs !ab<ENTER> @?git tag -d %(tag)
+bind refs !ab<ENTER> @?git branch -D %(ref)
+# }
+
+# Main {
+bind main c<ENTER> !git commit
+bind main ca<ENTER> @?git commit --amend --no-edit
+bind main caa<ENTER> ?git commit --amend
+bind main ab<ENTER> @git tag "%(prompt new tag: )" %(commit)
+bind main at<ENTER> @git branch "%(prompt new branch: )" %(commit)
+bind main co<ENTER> ?git checkout %(commit)
+bind main rs<ENTER> @?git reset --hard %(commit)
+bind main rv<ENTER> @git revert --no-edit %(commit)
+bind main rbi<ENTER> ?git rebase -i %(commit)
+bind main cp<ENTER> @git cherry-pick -s %(commit)
+bind main fp<ENTER> ?git format-patch -k --binary --histogram -1 -o . %(commit)
+
+bind main C none
+bind main ! none
+bind main !rb<ENTER> @git rebase --abort
+bind main !cp<ENTER> @git cherry-pick --abort
+bind main !co<ENTER> @?git reset %(commit)
+bind main !at<ENTER> @?git tag -d %(tag)
+bind main !ab<ENTER> @?git branch -D %(ref)
+# }
+
+# Reflog {
+bind reflog C none
+bind reflog ! none
+bind reflog !cp<ENTER> @git cherry-pick --abort
+bind reflog rs<ENTER> @?git reset --hard %(commit)
+bind reflog cp<ENTER> @?git cherry-pick -s %(commit)
+bind reflog co<ENTER> ?git checkout %(commit)
+# }
