tools: update test config of get-image

--- a/tools/test/get-image/image.conf
+++ b/tools/test/get-image/image.conf
@@ -1,8 +1,8 @@
 # required
-remote='karl@hogwarts'
+remote='karl@127.0.0.1'
 remote_root=(
 "$(pwd)"
-"$(readlink -e $0)"
+"$(dirname $(readlink -e $0))"
 )
 
 # optional
