--- a/tools/test/get-image/image.conf
+++ b/tools/test/get-image/image.conf
@@ -6,8 +6,8 @@ remote_root=(
 )
 
 # optional
-default_local_dir="images@$(date +%Y%m%d-%H%M%S)"
-default_remote_files=(
+local_dir="images@$(date +%Y%m%d-%H%M%S)"
+remote_files=(
 "aaa.img"
 "bbb.bin"
 "ccc.xz"
