tmp: change tmux config
tmux: fix the keymap bugs of splitting window

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -36,17 +36,24 @@ set -s command-alias[10] vs='split-window -h'
 set -s command-alias[11] hs='split-window -v'
 
 ## Key mapping
-bind ` send-prefix			# press twice '`' => '`'
+bind ` send-prefix			# press '`' twice => '`'
 bind a last-window
 bind r move-window -r		# sort the windows
 
 # create a window next to current one
 bind c new-window -a -c "#{pane_current_path}"
-bind - split-window -h -c "#{pane_current_path}"
-bind | split-window -v -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# bind j prev-pane
+# bind k next-pane
+# bind J prev-window
+# bind K next-window
+# open debug ide
 
 # search history above
 bind j copy-mode \; send-key ?
+# bind b copy-mode \; send-key ?
 
 # open float terminal
 float_script="${XDG_CONFIG_HOME}/tmux/tools/float-pane"
