tmux: update configuration

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,6 +11,9 @@
 ## containers:
 # session > window > pane
 
+# erase all keybinds
+# unbind -a
+
 set -g prefix `				# set '`' as prefix key
 
 # solve colorized issue in tmux
@@ -36,17 +39,29 @@ set -s command-alias[10] vs='split-window -h'
 set -s command-alias[11] hs='split-window -v'
 
 ## Key mapping
-bind ` send-prefix			# press twice '`' => '`'
+bind ` send-prefix			# press '`' twice => '`'
 bind a last-window
 bind r move-window -r		# sort the windows
 
 # create a window next to current one
 bind c new-window -a -c "#{pane_current_path}"
-bind - split-window -h -c "#{pane_current_path}"
-bind | split-window -v -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# select next pane
+bind -r j select-pane -Z -t :.+
+# select previous pane
+bind -r k select-pane -Z -t :.-
+
+# to next window
+bind -r J next
+# to previous window
+bind -r K prev
+
+# open debug ide
 
 # search history above
-bind j copy-mode \; send-key ?
+bind g copy-mode \; send-key ?
 
 # open float terminal
 float_script="${XDG_CONFIG_HOME}/tmux/tools/float-pane"
