--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,6 +11,9 @@
 ## containers:
 # session > window > pane
 
+# erase all keybinds
+# unbind -a
+
 set -g prefix `				# set '`' as prefix key
 
 # solve colorized issue in tmux
@@ -45,15 +48,20 @@ bind c new-window -a -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-# bind j prev-pane
-# bind k next-pane
-# bind J prev-window
-# bind K next-window
+# select next pane
+bind -r j select-pane -Z -t :.+
+# select previous pane
+bind -r k select-pane -Z -t :.-
+
+# to next window
+bind -r J next
+# to previous window
+bind -r K prev
+
 # open debug ide
 
 # search history above
-bind j copy-mode \; send-key ?
-# bind b copy-mode \; send-key ?
+bind g copy-mode \; send-key ?
 
 # open float terminal
 float_script="${XDG_CONFIG_HOME}/tmux/tools/float-pane"
