tmux: add escape time to avoid showing '0;10;1c'
Signed-off-by: Karl Liang <liang.karl@outlook.com>

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -123,6 +123,10 @@ set -g @dracula-refresh-rate 5
 # set -g @plugin 'egel/tmux-gruvbox'
 # set -g @tmux-gruvbox 'dark' # or 'light'
 
+# FIXME: WA(?) for WSL2
+# https://github.com/microsoft/WSL/issues/5931
+set -g escape-time 50
+
 # Initialize TPM (keep this line at the very bottom of tmux.conf)
 # run-shell '-b' is for background process.
 # go into tmux and wait for applied changes are async
