tmp: update tmux keybind
Signed-off-by: Karl Liang <liang.karl@outlook.com>

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -49,19 +49,21 @@ bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # select next pane
-bind -r j select-pane -Z -t :.+
+bind -r N select-pane -Z -t :.+
 # select previous pane
-bind -r k select-pane -Z -t :.-
+bind -r P select-pane -Z -t :.-
 
 # to next window
-bind -r J next
+bind -r n next
 # to previous window
-bind -r K prev
+bind -r p prev
 
 # open debug ide
+debug_console="${XDG_CONFIG_HOME}/tmux/tools/debug-console"
+bind o run-shell ${debug_console}
 
 # search history above
-bind g copy-mode \; send-key ?
+bind j copy-mode \; send-key ?
 
 # open float terminal
 float_script="${XDG_CONFIG_HOME}/tmux/tools/float-pane"
