--- a/config/tig/config
+++ b/config/tig/config
@@ -56,9 +56,8 @@ bind generic ,fd view-blob
 bind generic ,rg view-grep
 bind generic h view-help
 bind generic M maximize
-bind generic d view-close-no-quit
-bind generic q<ENTER> view-close
-bind generic qq<ENTER> quit
+bind generic q view-close-no-quit
+bind generic Q quit
 # }
 
 # Misc {
@@ -74,7 +73,7 @@ bind generic dc<ENTER> !git diff --check
 bind stage A stage-update-part
 bind stage a stage-update-line
 bind stage c<ENTER> !git commit
-bind stage ca<ENTER> @?git commit --amend --no-edit
+bind stage ca<ENTER> +?git commit --amend --no-edit
 bind stage caa<ENTER> ?git commit --amend
 # don't bind 'none' since 'none' would override 'view-xxxx'
 bind stage 1 view-main
@@ -85,61 +84,61 @@ bind stage 2 view-refs
 bind status C none
 bind status ! none
 bind status c<ENTER> !git commit
-bind status ca<ENTER> @?git commit --amend --no-edit
-bind status caa<ENTER> ?git commit --amend
-bind status co<ENTER> @?git checkout %(file)
+bind status caa<ENTER> +?git commit --amend --no-edit
+bind status ca<ENTER> ?git commit --amend
+bind status co<ENTER> +?git checkout %(file)
 bind status rm<ENTER> +?git clean -f %(file)
-bind status y<ENTER> @?git stash save "%(prompt new stash: )"
+bind status y<ENTER> +?git stash save "%(prompt new stash: )"
 # }
 
 # Reference {
-bind refs fa<ENTER> @git fetch --all
+bind refs fa<ENTER> +git fetch --all
 bind refs m<ENTER> ?git merge %(ref)
 bind refs rb<ENTER> ?git rebase %(ref)
-bind refs co<ENTER> @git checkout %(ref)
-bind refs cd<ENTER> @git checkout -d %(ref)
+bind refs co<ENTER> +git checkout %(ref)
+bind refs cd<ENTER> +git checkout -d %(ref)
 # only available in FF
-bind refs ps<ENTER> @?git fetch . HEAD:%(ref)
+bind refs ps<ENTER> +?git fetch . HEAD:%(ref)
 
 bind refs C none
 bind refs ! none
-bind refs !m<ENTER> @git merge --abort
-bind refs !rb<ENTER> @git rebase --abort
-bind refs !at<ENTER> @?git tag -d %(tag)
-bind refs !ab<ENTER> @?git branch -D %(branch)
+bind refs !m<ENTER> +git merge --abort
+bind refs !rb<ENTER> +git rebase --abort
+bind refs !at<ENTER> +?git tag -d %(tag)
+bind refs !ab<ENTER> +?git branch -D %(branch)
 # }
 
 # Main {
 set main-options = -n 20000
 
 bind main c<ENTER> !git commit
-bind main ca<ENTER> @?git commit --amend --no-edit
-bind main caa<ENTER> ?git commit --amend
-bind main at<ENTER> @git tag "%(prompt new tag: )" %(commit)
-bind main ab<ENTER> @git branch "%(prompt new branch: )" %(commit)
+bind main caa<ENTER> +?sh -c 'git commit --amend --no-edit &> /dev/null && echo \'success\''
+bind main ca<ENTER> ?git commit --amend
+bind main at<ENTER> +git tag "%(prompt new tag: )" %(commit)
+bind main ab<ENTER> +git branch "%(prompt new branch: )" %(commit)
 bind main co<ENTER> ?git checkout %(commit)
-bind main rs<ENTER> @?git reset --hard %(commit)
-bind main rv<ENTER> @git revert --no-edit %(commit)
+bind main rs<ENTER> +?git reset --hard %(commit)
+bind main rv<ENTER> +git revert --no-edit %(commit)
 bind main rbi<ENTER> ?git rebase -i %(commit)
-bind main cp<ENTER> @git cherry-pick -s %(commit)
+bind main cp<ENTER> +git cherry-pick -s %(commit)
 bind main fp<ENTER> ?git format-patch -k --binary --histogram -1 -o . %(commit)
 
 bind main G move-last-line
 bind main C none
 bind main ! none
-bind main !rb<ENTER> @git rebase --abort
-bind main !rv<ENTER> @git revert --abort
-bind main !cp<ENTER> @git cherry-pick --abort
-bind main !c<ENTER> @?git reset %(commit)
-bind main !at<ENTER> @?git tag -d %(tag)
-bind main !ab<ENTER> @?git branch -D %(branch)
+bind main !rb<ENTER> +git rebase --abort
+bind main !rv<ENTER> +git revert --abort
+bind main !cp<ENTER> +git cherry-pick --abort
+bind main !c<ENTER> +?git reset %(commit)
+bind main !at<ENTER> +?git tag -d %(tag)
+bind main !ab<ENTER> +?git branch -D %(branch)
 # }
 
 # Reflog {
 bind reflog C none
 bind reflog ! none
-bind reflog !cp<ENTER> @git cherry-pick --abort
-bind reflog rs<ENTER> @?git reset --hard %(commit)
-bind reflog cp<ENTER> @?git cherry-pick -s %(commit)
+bind reflog !cp<ENTER> +git cherry-pick --abort
+bind reflog rs<ENTER> +?git reset --hard %(commit)
+bind reflog cp<ENTER> +?git cherry-pick -s %(commit)
 bind reflog co<ENTER> ?git checkout %(commit)
 # }
