tmux: add new plugin, tmux-jump

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -63,7 +63,7 @@ debug_console="${XDG_CONFIG_HOME}/tmux/tools/debug-console"
 bind o run-shell ${debug_console}
 
 # search history above
-bind j copy-mode \; send-key ?
+bind J copy-mode \; send-key ?
 
 # open float terminal
 float_script="${XDG_CONFIG_HOME}/tmux/tools/float-pane"
@@ -96,6 +96,13 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible' # Make tmux more sensible
 set -g @plugin 'tmux-plugins/tmux-sessionist' # more keymap for session
 set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
+
+# tmux-jump
+# https://github.com/schasse/tmux-jump
+set -g @plugin 'schasse/tmux-jump' # a plugin like vimium
+# set -g @jump-key 's' # default trigger by <leader>j
+# set -g @jump-bg-color '\e[0m\e[90m'
+# set -g @jump-fg-color '\e[1m\e[31m'
 
 ## Themes
 # Dracula: https://draculatheme.com/tmux
