--- a/config/tig/config
+++ b/config/tig/config
@@ -9,6 +9,7 @@
 # used for boosting loading speed
 set commit-order = default
 set main-view-commit-title-graph = v1
+set refresh-mode = after-command
 
 # Addjust the column width of author
 set main-view = line-number:no,interval=5 \
@@ -65,16 +66,15 @@ bind generic G none
 
 bind generic gg move-first-line
 bind generic G move-last-line
-bind generic pwd<ENTER> +git rev-parse --show-toplevel
-bind generic dc<ENTER> !git diff --check
+bind generic pwd +git rev-parse --show-toplevel
 # }
 
 # Stage {
 bind stage A stage-update-part
 bind stage a stage-update-line
-bind stage c<ENTER> !git commit
-bind stage ca<ENTER> +?git commit --amend --no-edit
-bind stage caa<ENTER> ?git commit --amend
+bind stage c<ENTER> >git commit
+bind stage ca >?git commit --amend
+bind stage cn @?git commit --amend --no-edit
 # don't bind 'none' since 'none' would override 'view-xxxx'
 bind stage 1 view-main
 bind stage 2 view-refs
@@ -83,62 +83,58 @@ bind stage 2 view-refs
 # Status {
 bind status C none
 bind status ! none
-bind status c<ENTER> !git commit
-bind status caa<ENTER> +?git commit --amend --no-edit
-bind status ca<ENTER> ?git commit --amend
-bind status co<ENTER> +?git checkout %(file)
-bind status rm<ENTER> +?git clean -f %(file)
-bind status y<ENTER> +?git stash save "%(prompt new stash: )"
+bind status c<ENTER> >git commit
+bind status ca >?git commit --amend
+bind status cn @?git commit --amend --no-edit
+bind status co @?git checkout %(file)
+bind status df @?git clean -f %(file)
+bind status ay @git stash save "%(prompt new stash: )"
 # }
 
 # Reference {
-bind refs fa<ENTER> +git fetch --all
-bind refs m<ENTER> ?git merge %(ref)
-bind refs rb<ENTER> ?git rebase %(ref)
-bind refs co<ENTER> +git checkout %(ref)
-bind refs cd<ENTER> +git checkout -d %(ref)
+bind refs fa @git fetch --all
+bind refs m<ENTER> @sh -c 'git merge %(ref) || git merge --abort'
+bind refs rb @sh -c 'git rebase %(ref) || git rebase --abort'
+bind refs co @git checkout %(ref)
+bind refs cd @git checkout -d %(ref)
 # only available in FF
-bind refs ps<ENTER> +?git fetch . HEAD:%(ref)
+bind refs ps +?git fetch . HEAD:%(ref)
 
 bind refs C none
 bind refs ! none
-bind refs !m<ENTER> +git merge --abort
-bind refs !rb<ENTER> +git rebase --abort
-bind refs !at<ENTER> +?git tag -d %(tag)
-bind refs !ab<ENTER> +?git branch -D %(branch)
+bind refs dt @?git tag -d %(tag)
+bind refs db @?git branch -D %(branch)
 # }
 
 # Main {
 set main-options = -n 20000
 
-bind main c<ENTER> !git commit
-bind main caa<ENTER> +?sh -c 'git commit --amend --no-edit &> /dev/null && echo \'success\''
-bind main ca<ENTER> ?git commit --amend
-bind main at<ENTER> +git tag "%(prompt new tag: )" %(commit)
-bind main ab<ENTER> +git branch "%(prompt new branch: )" %(commit)
-bind main co<ENTER> ?git checkout %(commit)
-bind main rs<ENTER> +?git reset --hard %(commit)
-bind main rv<ENTER> +git revert --no-edit %(commit)
-bind main rbi<ENTER> ?git rebase -i %(commit)
-bind main cp<ENTER> +git cherry-pick -s %(commit)
-bind main fp<ENTER> ?git format-patch -k --binary --histogram -1 -o . %(commit)
+bind main ud @?git reset HEAD@{1}
+bind main c<ENTER> >git commit
+bind main ca >?git commit --amend
+bind main cn @?git commit --amend --no-edit
+bind main at @git tag "%(prompt new tag: )" %(commit)
+bind main ab @git branch "%(prompt new branch: )" %(commit)
+bind main co @git checkout %(commit)
+bind main rh @?git reset --hard %(commit)
+bind main rv @sh -c 'git revert --no-edit %(commit) || git revert --abort'
+bind main rbi >?git rebase -i %(commit)
+bind main cp @sh -c 'git cherry-pick -s %(commit) || git cherry-pick --abort'
+bind main fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
 
 bind main G move-last-line
 bind main C none
 bind main ! none
-bind main !rb<ENTER> +git rebase --abort
-bind main !rv<ENTER> +git revert --abort
-bind main !cp<ENTER> +git cherry-pick --abort
-bind main !c<ENTER> +?git reset %(commit)
-bind main !at<ENTER> +?git tag -d %(tag)
-bind main !ab<ENTER> +?git branch -D %(branch)
+bind main rs @?git reset %(commit)
+bind main dt @?git tag -d %(tag)
+bind main db @?git branch -D %(branch)
 # }
 
 # Reflog {
 bind reflog C none
 bind reflog ! none
-bind reflog !cp<ENTER> +git cherry-pick --abort
-bind reflog rs<ENTER> +?git reset --hard %(commit)
-bind reflog cp<ENTER> +?git cherry-pick -s %(commit)
-bind reflog co<ENTER> ?git checkout %(commit)
+bind reflog rh @?git reset --hard %(commit)
+bind reflog cp @sh -c 'git cherry-pick -s %(commit) || git cherry-pick --abort'
+bind reflog co @git checkout %(commit)
+bind reflog cd @git checkout -d %(commit)
 # }
