tmux: update keybinds
1. fix hsplit/vsplit mismatched
2. add new window/pane switch keybinds

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,6 +11,9 @@
 ## containers:
 # session > window > pane
 
+# erase all keybinds
+# unbind -a
+
 set -g prefix `				# set '`' as prefix key
 
 # solve colorized issue in tmux
@@ -36,14 +39,24 @@ set -s command-alias[10] vs='split-window -h'
 set -s command-alias[11] hs='split-window -v'
 
 ## Key mapping
-bind ` send-prefix			# press twice '`' => '`'
+bind ` send-prefix			# press '`' twice => '`'
 bind a last-window
 bind r move-window -r		# sort the windows
 
 # create a window next to current one
 bind c new-window -a -c "#{pane_current_path}"
-bind - split-window -h -c "#{pane_current_path}"
-bind | split-window -v -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# select next pane
+bind -r N select-pane -Z -t :.+
+# select previous pane
+bind -r P select-pane -Z -t :.-
+
+# to next window
+bind -r n next
+# to previous window
+bind -r p prev
 
 # search history above
 bind j copy-mode \; send-key ?
