tmux: add debug console feature

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -58,6 +58,10 @@ bind -r n next
 # to previous window
 bind -r p prev
 
+# open debug ide
+debug_console="${XDG_CONFIG_HOME}/tmux/tools/debug-console"
+bind o run-shell ${debug_console}
+
 # search history above
 bind j copy-mode \; send-key ?
 
