--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -58,6 +58,9 @@ bind -r n next
 # to previous window
 bind -r p prev
 
+# sort the sessions by name
+bind s choose-tree -sZ -O name
+
 # open debug ide
 debug_console="${XDG_CONFIG_HOME}/tmux/tools/debug-console"
 bind o run-shell ${debug_console}
