--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -49,14 +49,14 @@ bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # select next pane
-bind -r N select-pane -Z -t :.+
+bind n select-pane -Z -t :.+
 # select previous pane
-bind -r P select-pane -Z -t :.-
+bind p select-pane -Z -t :.-
 
 # to next window
-bind -r n next
-# to previous window
-bind -r p prev
+bind -r Tab next
+# Shift+Tab: to previous window
+bind -r BTab prev
 
 # sort the sessions by name
 bind s choose-tree -sZ -O name
