tmux: optimize whole float term feature
1. simplify config
2. use window id to create ft_win
3. change to cwd every time open ft_win

--- a/config/tmux/float-term.conf
+++ b/config/tmux/float-term.conf
@@ -24,26 +24,24 @@ set -g base-index 1			# set window index to 1
 set -g pane-base-index 1	# set pane index to 1
 set -g history-limit 10000	# scroll history size
 setw -g mode-keys vi		# set copy-mode to vi style
-setw -g automatic-rename	# rename window automately
 set -sg escape-time 0		# no waiting time
 set -g focus-events on		# Used for vim-tmux-clipboard
 setw -g monitor-bell on		# monitor bell in the window
 setw -g visual-bell on		# show visual alert when task complete
 setw -g bell-action other	# only other, not current window, triggers bell
 
+# don't mess up the window name
+# setw -g automatic-rename	# rename window automately
+
 # Add alias for split-window
 set -s command-alias[10] vs='split-window -h'
 set -s command-alias[11] hs='split-window -v'
 
+# Reset(clean) all key-bind setup
+# unbind -a
+
 ## Key mapping
 bind ` send-prefix			# press twice '`' => '`'
-bind a last-window
-bind r move-window -r		# sort the windows
-
-# create a window next to current one
-bind c new-window -a -c "#{pane_current_path}"
-bind - split-window -h -c "#{pane_current_path}"
-bind | split-window -v -c "#{pane_current_path}"
 
 # search history above
 bind j copy-mode \; send-key ?
@@ -54,49 +52,15 @@ bind j copy-mode \; send-key ?
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
-tpm_dir="$XDG_CONFIG_HOME/tmux/plugins/tpm"
-tpm_url='https://github.com/tmux-plugins/tpm'
-flag='~/.tpm-first-run'
-
-if "test ! -d ${tpm_dir}" \
-    "run 'git clone --depth=1 $tpm_url $tpm_dir \
-             && ${tpm_dir}/bin/install_plugins; \
-             touch ${flag}'"
-
-msg='display-message -p "press Leader + I to install other plugins" ; \
-         set-hook -gu session-created ;'
-if "test -f ${flag}" \
-    "run 'rm -f ${flag}'; set-hook -g session-created '${msg}'"
 
 # TPM(tmux plugin manager) itself
 set -g @plugin 'tmux-plugins/tpm'
 
-# Prefix + I to install these plugins
 set -g @plugin 'tmux-plugins/tmux-sensible' # Make tmux more sensible
 set -g @plugin 'tmux-plugins/tmux-sessionist' # more keymap for session
 set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
 
 ## Themes
-# Dracula: https://draculatheme.com/tmux
-# set -g @plugin 'dracula/tmux'
-# '*' -> current pane, '-' -> previous window, '!' -> bell
-# set -g @dracula-show-flags true
-# set -g @dracula-show-left-icon session
-
-# show dracula plugins
-# available plugins:
-# battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith,
-# weather, time
-# set -g @dracula-plugins "cpu-usage ram-usage"
-# set -g @dracula-show-battery false
-# set -g @dracula-show-network false
-# set -g @dracula-show-weather false
-# set -g @dracula-show-time false
-# set -g @dracula-day-month false
-# set -g @dracula-ram-usage false
-# set -g @dracula-cpu-usage false
-# set -g @dracula-refresh-rate 5
-
 # tmux-gruvbox: https://github.com/egel/tmux-gruvbox
 # Good theme, but need more customization
 set -g @plugin 'egel/tmux-gruvbox'
