--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -69,8 +69,8 @@ bind o run-shell ${debug_console}
 bind J copy-mode \; send-key ?
 
 # open float terminal
-float_script="${XDG_CONFIG_HOME}/tmux/tools/float-pane"
-bind Space run-shell ${float_script}
+fterm="${XDG_CONFIG_HOME}/tmux/tools/float-term"
+bind Space run-shell ${fterm}
 
 ## Plugins
 # List of plugins
