tmux: using reverse search is more often than jump on the screen

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -66,7 +66,7 @@ debug_console="${XDG_CONFIG_HOME}/tmux/tools/debug-console"
 bind o run-shell ${debug_console}
 
 # search history above
-bind J copy-mode \; send-key ?
+bind j copy-mode \; send-key ?
 
 # open float terminal
 fterm="${XDG_CONFIG_HOME}/tmux/tools/float-term"
@@ -103,7 +103,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
 # tmux-jump
 # https://github.com/schasse/tmux-jump
 set -g @plugin 'schasse/tmux-jump' # a plugin like vimium
-# set -g @jump-key 's' # default trigger by <leader>j
+set -g @jump-key 'J' # default trigger by <leader>j
 # set -g @jump-bg-color '\e[0m\e[90m'
 # set -g @jump-fg-color '\e[1m\e[31m'
 
